-Facebook share button -Alignement fix -Pointer for ref

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -92,6 +92,7 @@
 u {
   border-bottom: 2px dotted blue;
   text-decoration: none;
+  cursor: pointer;
 }
 
 th {
@@ -221,4 +222,9 @@ td.border_diff, tr.border_diff{
 
 td.border_over, tr.border_over{
   border-left: 2px solid #007AFF !important;
+}
+
+.fb_iframe_widget {
+  position: relative;
+  top: -4px !important;
 }
